@@ -47,6 +47,8 @@ debian-installer (2010xxxx) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * G-I: include gtk2-engines-udeb through pkg-lists.
+  * Add check for incorrect file attributes on device nodes, which can occur
+    when using fakeroot after restarting a (failed) build.
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 14 Feb 2010 17:06:27 +0100
 
